--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -44,7 +44,7 @@ font-2 = Noto Color Emoji:scale=11:style=Regular;2
 font-3 = Symbola:pixelsize=11;3
 
 modules-left = bspwm
-modules-center = mpd cmus 
+modules-center = mpd cmus
 modules-right = torrent pacupdate wifi backlight volume battery date
 
 tray-position = right
@@ -60,12 +60,12 @@ pin-workspaces = false
 strip-wsnumbers = true
 
 label-focused = 
-label-focused-foreground = ${colors.secondary}
+label-focused-foreground = ${colors.foreground}
 ;label-focused-underline= ${colors.background}
 label-focused-padding = 1
 
 label-occupied = 
-label-occupied-foreground = ${colors.secondary}
+label-occupied-foreground = ${colors.foreground}
 label-occupied-padding = 1
 
 label-urgent = 
@@ -73,6 +73,7 @@ label-urgent-foreground = ${colors.alert}
 label-urgent-padding = 1
 
 label-empty = 
+label-empty-foreground = ${colors.background}
 label-empty-padding = 1
 
 
@@ -125,7 +126,7 @@ interval = 600
 format = <label>
 format-prefix = 
 format-prefix-padding-left = 1
-format-foreground = ${colors.secondary}
+format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 
 label = %output%
@@ -134,13 +135,13 @@ label-padding = 1
 
 [module/wifi]
 type = internal/network
-interface = wlp2s0 
+interface = wlp2s0
 interval = 3.0
 ping-interval = 0
 accumulate-stats = true
 
-format-connected-prefix = 
-format-connected-prefix-padding-left = 1
+format-connected-prefix = ""
+format-connected-prefix-padding-left = 0
 format-connected-foreground = ${colors.foreground}
 format-connected-background = ${colors.background}
 label-connected = %downspeed%
@@ -150,15 +151,17 @@ format-disconnected-prefix =  睊
 format-disconnected-prefix-padding-left = 1
 format-disconnected-foreground = ${colors.alert}
 format-disconnected-background = ${colors.background}
-label-disconnected-padding = 1.5
-label-disconnected = Offline 
+label-disconnected-padding = 1
+label-disconnected = Offline
 
 format-packet-loss = <animation-packetloss> <label-packetloss>
 format-packetloss-prefix-padding-left = 1
 format-packetloss-foreground = ${colors.yellow}
 format-packetloss-background = ${colors.background}
-label-packetloss-padding = 1.5
+
+label-packetloss-padding = 1
 label-packetloss = Packet loss
+
 animation-packetloss-0 = 
 animation-packetloss-0-foreground = ${colors.red}
 animation-packetloss-1 = 
@@ -221,6 +224,36 @@ battery = BAT0
 adapter = AC
 full-at = 99
 
+format-charging-prefix = " "
+format-charging-prefix-padding-left = 1
+format-charging = <animation-charging><label-charging>
+format-charging-foreground = ${colors.foreground}
+format-charging-background = ${colors.background}
+label-charging-padding = 1
+label-charging = %percentage%%
+animation-charging-0 = " "
+animation-charging-1 = " "
+animation-charging-2 = " "
+animation-charging-3 = " "
+animation-charging-4 = " "
+animation-charging-framerate = 750
+
+format-full-prefix-padding-left = 1
+format-full = <ramp-capacity><label-full>
+format-full-foreground = ${colors.foreground}
+format-full-background = ${colors.background}
+label-full-padding = 1
+
+format-discharging = <ramp-capacity><label-discharging>
+format-discharging-foreground = ${colors.foreground}
+format-discharging-background = ${colors.background}
+label-discharging-padding = 1
+
+ramp-capacity-0 = " "
+ramp-capacity-1 = " "
+ramp-capacity-2 = " "
+ramp-capacity-3 = " "
+ramp-capacity-4 = " "
 
 [module/volume]
 type = internal/pulseaudio
