--- a/.config/nvim/config/repo.yaml
+++ b/.config/nvim/config/repo.yaml
@@ -19,6 +19,7 @@
     let g:matchup_delim_start_plaintext = 0
     let g:matchup_transmute_enabled = 0
 
+- { repo: wellle/visual-split.vim, merged: 0 }
 
   # Languages
   # ---------
